--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "element-plus": "^2.3.4",
     "highlight.js": "^11.7.0",
     "sqlite3": "^5.1.6",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
